--- a/seconcord.ini
+++ b/seconcord.ini
@@ -1,5 +1,11 @@
 [keys]
-biblia_apikey = ea842c369c1e41ac8c433e088f3dee79
+biblia_apikey = <get your own from api.biblia.com>
+
+[database]
+server=localhost
+user=*****
+password=*****
+database=seconcordance
 
 [last_run]
 christianity = Feb 24 2014 17:09
