--- a/seconcord.ini
+++ b/seconcord.ini
@@ -7,7 +7,13 @@ user=*****
 password=*****
 database=seconcordance
 
+[database]
+server = localhost
+user = seproxy
+password = 4bGayStF.LamsB
+database = seconcordance
+
 [last_run]
-christianity = Feb 24 2014 17:09
-hermeneutics = Feb 24 2014 17:09
+christianity = Feb 25 2014 14:03
+hermeneutics = Feb 25 2014 14:04
 
