--- a/seconcord.ini
+++ b/seconcord.ini
@@ -9,11 +9,11 @@ database=seconcordance
 
 [database]
 server = localhost
-user = seproxy
-password = 4bGayStF.LamsB
+user = *****
+password = *****
 database = seconcordance
 
 [last_run]
-christianity = Feb 25 2014 14:03
+christianity = ****
 hermeneutics = Feb 25 2014 14:04
 
