Integrated with Django
This gives me an admin CRUD capability, and sets me up to be able to
make a nice template to showcase the application.

--- a/seconcord.ini
+++ b/seconcord.ini
@@ -1,19 +1,13 @@
 [keys]
-biblia_apikey = <get your own from api.biblia.com>
-
-[database]
-server=localhost
-user=*****
-password=*****
-database=seconcordance
+biblia_apikey = ea842c369c1e41ac8c433e088f3dee79
 
 [database]
 server = localhost
-user = *****
-password = *****
+user = seproxy
+password = 4bGayStF.LamsB
 database = seconcordance
 
 [last_run]
-christianity = ****
-hermeneutics = Feb 25 2014 14:04
+christianity = Feb 26 2014 16:38
+hermeneutics = Feb 26 2014 16:38
 
